tests/error/left_mutable.gw
// [contains] left-side operand is not mutable
 2 = 1;
